<resources>
    <string name="app_name">AndroCoda</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="one_bitcoin_is">One BitCoin is</string>
</resources>